# advanced-ml-sentiment-lab

./: .dockerignore  .env.example  .gitignore  CASE_STUDY.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: doctor.py
sentiment_lab/: __init__.py  artifacts.py  data_quality.py  decision.py  evaluation.py  explainability.py  features.py  io.py  prediction.py  preprocessing.py  reporting.py  runtime_config.py  stability.py  thresholding.py  training.py  ui_theme.py  ux.py
sentiment_lab/app/: components.py  main.py  navigation.py  runtime.py
tests/: test_core_logic.py  test_smoke.py
