[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-ml-sentiment-lab"
version = "1.0.0"
description = "A decision-ready sentiment analysis dashboard with leakage-safe training, threshold tuning, and exportable artifacts."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Tarek Masryo" }]
dependencies = [
  "streamlit==1.57.0",
  "pandas==2.3.3",
  "numpy==2.4.4",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "plotly==6.7.0",
  "joblib==1.5.3",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.12",
  "pytest==8.3.4",
  "pre-commit==4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentiment_lab", "sentiment_lab.*"]
exclude = ["assets*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  "build",
  "dist",
  "artifacts",
  "models",
  "outputs",
  "runs",
  "data",
  "datasets",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sentiment_lab"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
